# rviz_lasso_tool

./: CMakeLists.txt  README.md  package.xml  plugin_description.xml
include/rviz_lasso_tool/: point_cloud_test.h  ramer_douglas_peucker_simplification.h  rviz_lasso_tool.h  selection_testing.h  selection_visualization.h
msg/: UserSelection.msg
src/: demo_node.cpp  main.cpp
src/rviz_lasso_tool/: point_cloud_test.cpp  ramer_douglas_peucker_simplification.cpp  rviz_lasso_tool.cpp  selection_visualization.cpp
