<?xml version="1.0"?>
<package format="1">
  <name>rviz_lasso_tool</name>
  <version>0.0.0</version>
  <description>The rviz_lasso_tool package</description>

  <author email="jmeyer@swri.org">Jonathan Meyer</maintainer>
  <maintainer email="jmeyer@swri.org">Jonathan Meyer</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>


  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
